fix: contain homepage horizontal overflow

--- a/_sass/_fiddle-home.scss
+++ b/_sass/_fiddle-home.scss
@@ -84,6 +84,7 @@
   color: var(--fh-text);
   font-size: 1rem;
   min-width: 0;
+  overflow-x: hidden;
 }
 
 .home-fiddle .page__content p,
